force-app/main/default/objects/Bus_Acceptance_Letter__c/Bus_Acceptance_Letter__c.object-meta.xml
<CustomObject>
    <description>The acknowledgment of Bus Acceptance</description>
    <label>Acknowledgment of Bus Acceptance</label>
    <nameField>
        <displayFormat>ABA-{0000}</displayFormat>
        <label>Bus Acceptance Letter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bus Acceptance Letters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>