force-app/main/default/objects/Bus_Acceptance_Letter__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By:</label>
    <length>25</length>
    <type>Text</type>
</CustomField>