force-app/main/default/objects/Bus_Acceptance_Letter__c/fields/Bus_Number__c.field-meta.xml
<CustomField>
    <fullName>Bus_Number__c</fullName>
    <formula>Buses__r.Customer_Bus_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Customer Bus Number</inlineHelpText>
    <label>Bus Number</label>
    <type>Text</type>
</CustomField>