force-app/main/default/objects/Bus_Acceptance_Letter__c/fields/Bus_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Bus_Work_Order__c</fullName>
    <description>Master Detail Relationship between Bus Word Order and Bus Acceptance Letter for form to get acknowledgement of the work done.</description>
    <label>Service Request</label>
    <referenceTo>Bus_Work_Order__c</referenceTo>
    <relationshipLabel>Acknowledgement  of Bus Acceptance</relationshipLabel>
    <relationshipName>Bus_Acceptance_Letters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>