force-app/main/default/objects/Bus_Acceptance_Letter__c/fields/Buses__c.field-meta.xml
<CustomField>
    <fullName>Buses__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipName>Bus_Acceptance_Letters</relationshipName>
    <type>Lookup</type>
</CustomField>