force-app/main/default/objects/Bus_Acceptance_Letter__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Contact Name from the Account in the Bus Work Order</description>
    <formula>Bus_Work_Order__r.Work_Order__r.Contact.FirstName  &amp;  Bus_Work_Order__r.Work_Order__r.Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>