force-app/main/default/objects/Bus_Acceptance_Letter__c/fields/Date_bus_accepted_at_Property_Location__c.field-meta.xml
<CustomField>
    <fullName>Date_bus_accepted_at_Property_Location__c</fullName>
    <description>The Acceptance date entered by the Service Resource.</description>
    <inlineHelpText>The Acceptance date entered by the Service Resource.</inlineHelpText>
    <label>Date Bus accepted at Property Location</label>
    <type>Date</type>
</CustomField>