force-app/main/default/objects/Bus_Acceptance_Letter__c/fields/Date_Submitted_to_the_Property__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_to_the_Property__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Todays Date</description>
    <label>Date Submitted to the Property</label>
    <type>Date</type>
</CustomField>