force-app/main/default/objects/Bus_Acceptance_Letter__c/fields/FSR__c.field-meta.xml
<CustomField>
    <fullName>FSR__c</fullName>
    <description>The Field Service Representative assigned to this Account</description>
    <formula>Account__r.Field_Service_Rep__r.FirstName  &amp;  &quot; &quot;  &amp;  Account__r.Field_Service_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSR</label>
    <type>Text</type>
</CustomField>