force-app/main/default/objects/Bus_Acceptance_Letter__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <label>Mileage</label>
    <length>25</length>
    <type>Text</type>
</CustomField>