force-app/main/default/objects/Bus_Acceptance_Letter__c/fields/PDI_is_not_complete_due_to__c.field-meta.xml
<CustomField>
    <fullName>PDI_is_not_complete_due_to__c</fullName>
    <description>Notes relating to the work to be completed</description>
    <label>PDI is not complete due to :</label>
    <type>TextArea</type>
</CustomField>