force-app/main/default/objects/Bus_Acceptance_Letter__c/fields/PDI_Owner__c.field-meta.xml
<CustomField>
    <fullName>PDI_Owner__c</fullName>
    <description>The Service Resource assigned to the Bus Work Order</description>
    <label>PDI Owner</label>
    <length>55</length>
    <type>Text</type>
</CustomField>