force-app/main/default/objects/Bus_Acceptance_Letter__c/fields/Test_Sign__c.field-meta.xml
<CustomField>
    <fullName>Test_Sign__c</fullName>
    <label>Test Sign</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>