force-app/main/default/objects/Bus_Acceptance_Letter__c/fields/VIN_Number__c.field-meta.xml
<CustomField>
    <fullName>VIN_Number__c</fullName>
    <description>The VIN Number of the bus from Bus Work Order</description>
    <formula>Bus_Work_Order__r.VIN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIN Number</label>
    <type>Text</type>
</CustomField>